--- a/Source/ArchipelagoRandomizer.csproj
+++ b/Source/ArchipelagoRandomizer.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <AssemblyName>ExampleMod</AssemblyName>
-        <Description>Example Mod</Description>
+        <AssemblyName>ArchipelagoRandomizer</AssemblyName>
+        <Description>A Nine Sols mod for the Archipelago multi-game randomizer system</Description>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Version>1.0.0</Version>
         <LangVersion>latest</LangVersion>
