--- a/Source/ArchipelagoRandomizer.csproj
+++ b/Source/ArchipelagoRandomizer.csproj
@@ -15,10 +15,10 @@
         <NineSolsPath Condition="'$(OS)' != 'Windows_NT'">$(HOME)/.local/share/Steam/steamapps/common/Nine Sols</NineSolsPath>
         
         <!-- If you're not using R2Modman/Thunderstore, this can be NineSolsPath as well. Only used in CopyDir -->
-        <ProfileDir Condition="'$(OS)' == 'Windows_NT'">C:/Users/$username/AppData/Roaming/r2modmanPlus-local/NineSols/profiles/Default</ProfileDir>
+        <ProfileDir Condition="'$(OS)' == 'Windows_NT'">C:/Users/j-pop/AppData/Roaming/r2modmanPlus-local/NineSols/profiles/Ixrec</ProfileDir>
         <ProfileDir Condition="'$(OS)' != 'Windows_NT'">$(HOME)/.config/r2modmanPlus-local/NineSols/profiles/Default</ProfileDir>
         <!-- After building, copy the dll to this folder. Useful for hot-reloading: https://github.com/BepInEx/BepInEx.Debug/blob/master/README.md#scriptengine -->
-        <!--<CopyDir>$(ProfileDir)/BepInEx/scripts</CopyDir>-->
+        <CopyDir>$(ProfileDir)/BepInEx/scripts</CopyDir>
     </PropertyGroup>
 
     <ItemGroup>
