--- a/thunderstore/thunderstore.toml
+++ b/thunderstore/thunderstore.toml
@@ -12,6 +12,7 @@ containsNsfwContent = false
 [package.dependencies]
 "BepInEx-BepInExPack" = "5.4.2100"
 "ninesolsmodding-NineSolsAPI" = "0.0.2"
+"Ixrec-TeleportFromAnywhere" = "0.1.1"
 
 [build]
 icon = "./icon.png"
