embed the .apworld's .jsonc files at build time from the submodule, and implement embedded resource loading of item and location AP ids, and correct various item/location errors that exposed

--- a/Source/ArchipelagoRandomizer.csproj
+++ b/Source/ArchipelagoRandomizer.csproj
@@ -22,6 +22,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <EmbeddedResource Include="../Archipelago/worlds/nine_sols/shared_static_logic/items.jsonc" />
+        <EmbeddedResource Include="../Archipelago/worlds/nine_sols/shared_static_logic/locations.jsonc" />
+        <EmbeddedResource Include="../Archipelago/worlds/nine_sols/shared_static_logic/connections.jsonc" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Reference Include="Assembly-CSharp">
             <HintPath>$(NineSolsPath)/NineSols_Data/Managed/Assembly-CSharp.dll</HintPath>
         </Reference>
