--- a/Source/ArchipelagoRandomizer.csproj
+++ b/Source/ArchipelagoRandomizer.csproj
@@ -86,7 +86,7 @@ Did you forget to adjust your NineSolsPath '$(NineSolsPath)'?" />
 
     <Target Name="PackageMod" AfterTargets="Publish">
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
-        <Copy SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\6.3.1\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
+        <Copy Condition="'$(OS)' == 'Windows_NT'" SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\6.3.1\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
         <Exec Command="tcli build --config-path ../thunderstore/thunderstore.toml" />
     </Target>
 </Project>
