update example yaml with new options for sol seal counts

--- a/Nine.Sols.yaml
+++ b/Nine.Sols.yaml
@@ -32,9 +32,55 @@ Nine Sols:
     'false': 0
     'true': 50
 
+  seals_for_eigong:
+    # The number of Sol Seals needed to open the door in Central Hall to New Kunlun Control Hub, fight Eigong,
+    # and complete the goal.
+    # Unlike the vanilla game, you don't need to visit Tiandao Research Center or trigger the "point of no return".
+    #
+    # You can define additional values between the minimum and maximum values.
+    # Minimum value is 0
+    # Maximum value is 8
+    8: 50
+    random: 0
+    random-low: 0
+    random-high: 0
+
+  seals_for_prison:
+    # The number of Sol Seals needed for Jiequan to appear in Factory (Great Hall), allowing you to "fight" him,
+    # do the whole Prison escape sequence, and check most of the locations in Factory (Machine Room).
+    # Note that you also need Mystic Nymph: Scout Mode before Jiequan will appear,
+    # since you can't do the Prison escape sequence without it.
+    # Unlike the vanilla game, the real Jiequan fight may be done before or after Prison, and it does not matter
+    # which Sol Seals you've collected, only the total number.
+    #
+    # You can define additional values between the minimum and maximum values.
+    # Minimum value is 0
+    # Maximum value is 8
+    3: 50
+    random: 0
+    random-low: 0
+    random-high: 0
+
+  seals_for_ethereal:
+    # The number of Sol Seals needed for the entrance to Lady Ethereal's soulscape to appear in Cortex Center.
+    # See also the skip_soulscape_platforming option.
+    # Unlike the vanilla game, it does not matter which Sol Seals you've collected, only the total number.
+    #
+    # You can define additional values between the minimum and maximum values.
+    # Minimum value is 0
+    # Maximum value is 8
+    4: 50
+    random: 0
+    random-low: 0
+    random-high: 0
+
   skip_soulscape_platforming:
-    # When you unlock Lady Ethereal by collecting 4 Sol Seals, if this option is enabled, Cortex Center will skip ahead
-    # to the state where you can enter her boss fight, instead of the long platforming sequence you normally do first.
+    # After you collect enough Sol Seals to unlock Lady Ethereal's soulscape (see seals_for_ethereal),
+    # if this option is enabled, Cortex Center will skip ahead to the state where you can enter her boss fight,
+    # instead of the long platforming sequence you normally do first.
+    # 
+    # This is a .yaml/generation option because it has a small effect on logic: The platforming sequence logically
+    # requires Tai-Chi Kick, so skipping it allows the Lady Ethereal fight to be in-logic with only Air Dash.
     'false': 50
     'true': 0
 
