unbreak CI by skipping the mc.net copy step

--- a/Source/ArchipelagoRandomizer.csproj
+++ b/Source/ArchipelagoRandomizer.csproj
@@ -87,12 +87,14 @@
         <Message Importance="high" Text="copying $(TargetPath) to $(CopyDir) ..." />
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(CopyDir)" SkipUnchangedFiles="true" />
         <Copy SourceFiles="$(TargetDir)$(TargetName).pdb" DestinationFolder="$(CopyDir)" SkipUnchangedFiles="true" />
-        <Copy SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\$(ArchipelagoMultiClientDotNetVersion)\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="$(ProfileDir)/BepInEx/plugins" SkipUnchangedFiles="true" />
+        <!-- Skip this in CI -->
+        <Copy Condition="'$(OS)' == 'Windows_NT'" SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\$(ArchipelagoMultiClientDotNetVersion)\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="$(ProfileDir)/BepInEx/plugins" SkipUnchangedFiles="true" />
     </Target>
 
     <Target Name="PackageMod" AfterTargets="Publish">
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
-        <Copy SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\$(ArchipelagoMultiClientDotNetVersion)\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
+        <!-- Skip this in CI -->
+        <Copy Condition="'$(OS)' == 'Windows_NT'" SourceFiles="C:\Users\j-pop\.nuget\packages\archipelago.multiclient.net\$(ArchipelagoMultiClientDotNetVersion)\lib\netstandard2.0\Archipelago.MultiClient.Net.dll" DestinationFolder="../thunderstore/build/dll" SkipUnchangedFiles="true" />
         <Exec Command="tcli build --config-path ../thunderstore/thunderstore.toml" />
     </Target>
 </Project>
