--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         run: dotnet tool install -g tcli
       - name: Check against all game versions
         run: |
-          # Skip the speedrun patch now that we know it's probably infeasible for rando to support it
+          # Skip the speedrun patch with grep -v, now that we know it's probably infeasible for rando to support it
           cut -f1 -d' ' libs-stripped/versions.txt | grep -v '202406181445' | while IFS= read -r version; do
             echo "Checking $version"
             dotnet build --no-restore -p:DllPath="$PWD/libs-stripped/$version"
