--- a/Nine.Sols.yaml
+++ b/Nine.Sols.yaml
@@ -127,23 +127,33 @@ Nine Sols:
     # The first root node you can teleport to from Four Seasons Pavilion after starting a randomized game.
     # This is often referred to as your "spawn", although you technically always spawn in FSP.
     # 
-    # Many root nodes are intentionally excluded from this list, usually because they would be "overly restrictive starts"
-    # (i.e. few if any locations would be checkable with no items, especially when Grapple, Ledge Grab and Wall Climb are
-    # all shuffled).
+    # Many root nodes are intentionally excluded from this list, usually because if you started there
+    # no locations would be checkable at the start of the game when you have no items yet.
     # 
-    # Some first_root_nodes may require certain items to be placed early.
-    # For example, if galactic_dock is your first node, Nymph or Tai-Chi Kick will be placed early.
-    # See the descriptions of shuffle_grapple, shuffle_wall_climb and shuffle_ledge_grab for similar cases.
+    # Some first_root_nodes will force items to be placed early, since the randomizer would be unbeatable otherwise:
+    # - galactic_dock early-places one of Nymph or Tai-Chi Kick
+    # - central_transport_hub early-places Tai-Chi Kick
+    # - factory_underground early-places one of Air Dash or Cloud Leap
+    # - inner_warehouse early-places Wall Climb and one of Cloud Leap, Air Dash or Ledge Grab
+    # - power_reservoir_west early-places one of Cloud Leap, Air Dash or Tai-Chi Kick
+    # See the descriptions of shuffle_grapple, shuffle_wall_climb and shuffle_ledge_grab for additional cases.
+    agrarian_hall: 0
+    apeman_facility_depths: 0
     apeman_facility_monitoring: 50
-    galactic_dock: 0
-    power_reservoir_east: 0
-    lake_yaochi_ruins: 0
-    yinglong_canal: 0
+    central_transport_hub: 0
     factory_great_hall: 0
+    factory_underground: 0
+    galactic_dock: 0
     outer_warehouse: 0
     grotto_of_scriptures_entry: 0
     grotto_of_scriptures_east: 0
     grotto_of_scriptures_west: 0
+    inner_warehouse: 0
+    lake_yaochi_ruins: 0
+    power_reservoir_east: 0
+    power_reservoir_west: 0
+    radiant_pagoda: 0
+    yinglong_canal: 0
 
   shuffle_grapple:
     # Takes away Yi's grapple hook and zipline sliding abilities until you collect the 'Grapple' item.
