add logic_difficulty to example yaml

--- a/Nine.Sols.yaml
+++ b/Nine.Sols.yaml
@@ -123,6 +123,37 @@ Nine Sols:
     # The costs may be any integer from 0 to 10, even if jade_cost_min and jade_cost_max are set to a narrower range.
     {}
 
+  logic_difficulty:
+    # `vanilla` is exactly what it sounds like: You will only be expected to do what the vanilla game required.
+    # 
+    # `medium` adds tricks that are easy to execute, once you're aware of them, but may require more effort to notice,
+    # set up and/or retry after failure. Specifically:
+    # - "Pseudo Air Dashes" using either a talisman ("T-dash") or Charged Strike ("CS-dash")
+    # - Using a Cloud Piercer S (or X) arrow to break Charged Strike barriers without Charged Strike
+    # - Using a Thunder Buster arrow (any level) to break one-way barriers from the "wrong" side
+    # - "Bow Hover": Press and hold jump, shoot the bow immediately (during the first half of Yi's upward movement) with
+    # any arrow equipped, and then simply never let go of the jump button until you're done hovering.
+    # - Using the Swift Runner skill to jump with extra horizontal momentum
+    # 
+    # `ledge_storage` adds the following LS-related glitches to logic:
+    #     - slash vault (also called LS "getup") or parry vault (also called LS "vault")
+    #     - parry float/hover
+    #     - moon slash wall slide
+    # These are harder to explain, so if you would like to learn them, check out the Ledge Storage section of
+    # Herdingoats' Nine Sols trick video: https://youtu.be/X9aii18KecU?t=766
+    # To avoid the complications of skill logic, setting up ledge storage with a skull kick is out of logic. Logic will
+    # assume you're doing the setup with either a Talisman dash, Air Dash, or Cloud Leap.
+    # 
+    # Other speedrun tech like respawn manipulation, low gravity, rope storage, invulnerability abuse, dashing
+    # between lasers, and combinations thereof like fast Sky Tower climb and miner skip are simply out of logic.
+    # No logic level will expect you to carry transient resources (azure sand, qi charges, ledge storage)
+    # between areas, or increase your capacity beyond the initial 2 sand and 1 qi.
+    # Parrying a flying enemy attack to reset platforming moves is only in logic at the one place in TRC
+    # where the vanilla game gives you a respawning enemy for this specific purpose.
+    vanilla: 50
+    medium: 0
+    ledge_storage: 0
+
   first_root_node:
     # The first root node you can teleport to from Four Seasons Pavilion after starting a randomized game.
     # This is often referred to as your "spawn", although you technically always spawn in FSP.
