add Arrows and Azure Bow item name groups

--- a/Nine.Sols.yaml
+++ b/Nine.Sols.yaml
@@ -322,6 +322,7 @@ Nine Sols:
   # "Recyclables"
   # "Poisons"
   # "Database Entries"
+  # "Arrows" (and the alias "Azure Bow")
 
   # Miscellaneous Location Name Groups provided by Nine Sols
 
